# FFmpegAndroidDemo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/file/: output.h264
app/src/main/cpp/: H264_decoder.cpp  H264_decoder.h  ffmpeg_player.cpp  logger.c  logger.h  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/zippo/ffmpegplayer/: AssetsUtil.java  FFmpegPlayer.java  GLRenderer.java  GlView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
